[package]
name = "sanitizeable_tests"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanitizeable = { path = "../sanitizeable" }

[dev-dependencies]
trybuild = "1.0.32"

[[bin]]
name = "misc"
path = "test/pass/misc.rs"

[[bin]]
name = "product"
path = "test/pass/product.rs"

[[bin]]
name = "user"
path = "test/pass/user.rs"
