[package]
name = "sanitizeable_examples"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanitizeable = { path = "../sanitizeable" }

[dev-dependencies]
trybuild = "1.0.32"

[[example]]
name = "misc"
path = "examples/pass/misc.rs"
test = false

[[example]]
name = "product"
path = "examples/pass/product.rs"
test = false

[[example]]
name = "user"
path = "examples/pass/user.rs"
test = false

