[package]
name = "sanitizeable_examples"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soruh/sanitizeable/"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanitizeable = { path = "../sanitizeable" }

[dev-dependencies]
trybuild = "1.0.32"
serde = "1.0"
serde_json = "1.0"

[[example]]
name = "misc"
path = "examples/pass/misc.rs"
test = false

[[example]]
name = "product"
path = "examples/pass/product.rs"
test = false

[[example]]
name = "user"
path = "examples/pass/user.rs"
test = false

[[example]]
name = "serde"
path = "examples/pass/serde.rs"
test = false

