[package]
name = "sanitizeable"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soruh/sanitizeable/"
readme = "../README.md"
description = "derive structs without certain fields"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanitizeable_derive = "0.1.0"