[package]
name = "sanitizeable_derive"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.38", features = ["full"] }

quote = "1.0.7"
proc-macro2 = "1.0.19"
